name:                turtlelang
version:             0.1.0.0
license:             PublicDomain
license-file:        UNLICENSE
author:              scturtle
maintainer:          scturtle@gmail.com
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- main-is:             Main.hs
  other-modules:       Codegen
                     , Syntax

  -- hs-source-dirs:      src
  -- exposed-modules:     
  build-depends:       base >=4.8 && <4.9
                     , llvm-general-pure == 3.4.5.3
                     , llvm-general == 3.4.5.3
                     , mtl
                     , parsec
                     , transformers
                     , containers
                     , directory
                     , filepath
                     , process
  default-language:    Haskell2010
  -- GHC-Options:         -Wall

executable tt
  main-is:             Main.hs
  other-modules:       Codegen
                     , Syntax
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , llvm-general-pure == 3.4.5.3
                     , llvm-general == 3.4.5.3
                     , mtl
                     , parsec
                     , transformers
                     , containers
                     , directory
                     , filepath
                     , process

  -- hs-source-dirs:      
  default-language:    Haskell2010
